--- a/include/menu.html
+++ b/include/menu.html
@@ -5,9 +5,9 @@
 <li><a href="#BASEURL#/doc/base/">Startup</a></li>
 <li><a href="#BASEURL#/doc/solver/">Solvers</a></li>
 <li><a href="#BASEURL#/doc/prox/">Proximal operators</a></li>
-<li><a href="#BASEURL#/demos/">Demonstration</a></li>
-<li><a href="#BASEURL#/signals/">Signals</a></li>
-<li><a href="#BASEURL#/utils/">Utils</a></li>
+<li><a href="#BASEURL#/doc/demos/">Demonstration</a></li>
+<li><a href="#BASEURL#/doc/signals/">Signals</a></li>
+<li><a href="#BASEURL#/doc/utils/">Utils</a></li>
 </ul>
 </li><li><a href="#BASEURL#/notes/">Notes</a></li>
 <li><a href="#BASEURL#/download.html">Download</a></li>
