--- a/include/menu.html
+++ b/include/menu.html
@@ -11,8 +11,7 @@
 </ul>
 </li><li><a href="#BASEURL#/notes/">Notes</a></li>
 <li><a href="#BASEURL#/download.html">Download</a></li>
-<li><a href="hhttps://lts2.epfl.ch/rrp/">R2P (Reproducible Research Platform)</a></li>
-<li><a href="mailto:unlocbox@groupes.epfl.ch">Contact</a></li>
+<li><a href="https://epfl-lts2.github.io/rrp-html/">R2P (Reproducible Research Platform)</a></li>
 <li><a href="http://perraudin.info">About the author</a></li>
 <li><a href="https://github.com/epfl-lts2/unlocbox">Development page</a></li>
 <li><a href="http://pyunlocbox.readthedocs.org">PyUNLocBoX</a></li>
